feat event and payment gateway
