# src/routes/api.ts
@@ -209,6 +209,32 @@ router.post('/events', [authMiddleware, aclMiddleware([ROLES.ADMIN])], eventCont
 router.get('/events', eventController.findAll
     /*
         #swagger.tags = ['Events']
+        #swagger.parameters['limit'] = {
+            in: 'query', 
+            type: 'number',
+            default: 10
+        }
+        #swagger.parameters['page'] = {
+            in: 'query', 
+            type: 'number',
+            default: 1
+        }
+        #swagger.parameters['category'] = {
+            in: 'query', 
+            type: 'string',
+        }
+        #swagger.parameters['isOnline'] = {
+            in: 'query', 
+            type: 'boolean',
+        }
+        #swagger.parameters['isFeatured'] = {
+            in: 'query', 
+            type: 'boolean',
+        }
+        #swagger.parameters['isPublish'] = {
+            in: 'query', 
+            type: 'boolean',
+        }
     */
 );
 router.get('/events/:id', eventController.findOne
